--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,5 +1,5 @@
 .counter {
-    position: absolute;
+    /*position: absolute;*/
     top: 50%;
     right: 50%;
     border: 1px solid blue;
@@ -8,7 +8,7 @@
  }
 
 .settings {
-    position: absolute;
+    /*position: absolute;*/
     border: 1px solid blue;
     margin: auto;
     border-radius: 3px;
